# python-sec

./: .gitignore  CHANGELOG.md  LICENSE  README.md  XML_Parsing.py  notes-tutorial.md  pyproject.toml  requirements.txt  sec_xbrl_parsing.py  sec_xbrl_parsing_v2.py  sec_xbrl_scrape_content.csv  sec_xbrl_scrape_values.csv  setup.py  test.js
0001326801-19-000069-xbrl/: fb-09302019xex322.htm  fb-20190930.xsd
data/: company_tickers.json  nasdaqtraded.txt  qqq.txt  sp500.csv  tik_to_cik.csv
docs/: SEC Scraping Documentation.docx  notes-sec-scraping.md  notes-why-xbrl.md
edgar/: __init__.py  archives.py  async_client.py  async_session.py  cache.py  client.py  companies.py  company.py  current_events.py  datasets.py  enums.py  exceptions.py  filings.py  issuers.py  logger.py  models.py  mutual_funds.py  ownership_filings.py  parser.py  search.py  series.py  session.py  submissions.py  tickers.py  utilis.py  utils.py  variable_insurance_products.py  xbrl.py
facebook10Q/: fb-09302019xex311.htm  fb-09302019xex312.htm  fb-09302019xex321.htm
old/: sec_xbrl_parsing_v1.py
pysec/: edgar.py  filing_types.py  parser.py
resources/: data-sources-fasb.md  data-sources-other.md  data-sources-sec.md  fx_data.py  label_tags.xlsx  sec-scraping-notes.md  sec-text-search-examples.md  sec_xbrl_parsing.py
samples/: cookbook_bulk_pipeline.ipynb  cookbook_company_research.ipynb  cookbook_filing_search.ipynb  cookbook_xbrl_analysis.ipynb  demo_jupyter_rendering.ipynb  edgar_client.py  use_api_submissions.py  use_api_xbrl.py  use_archive_service.py  use_async_client.py  use_client.py  (+16 more)
(+575 files in other folders)
